# SmartEvict-Sementic-Cache-Eviction

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmark/: run_benchmark.py
data/: download_lmsys.py
model/: dueling_net.py  train.py
policies/: eviction.py  gptcache_adapter.py  wrapper.py
results/: RESULTS.md  benchmark.json  benchmark_minilm.json  benchmark_multiseed_hashing.json  benchmark_multiseed_minilm.json  learned_policy.npz  minilm_learned_policy.npz
smartevict/: __init__.py
smartevict/benchmark/: run_benchmark.py
smartevict/data/: generate_synthetic.py
smartevict/features/: embeddings.py  extract.py
smartevict/model/: dueling_net.py  train.py
smartevict/policies/: eviction.py  gptcache_adapter.py  wrapper.py
smartevict/simulator/: cache_sim.py
tests/: test_all.py
